--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+# NÃO COMMIT este arquivo no repositório!
+# Adicione .env ao seu .gitignore para proteger suas chaves.
+
 # OpenAI
-OPENAI_API_KEY=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
+OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
 
 # Supabase Postgres Connection (Pooler)
-DATABASE_URL=postgresql://postgres.zkgcpdvawlsqzdneacsw:Grasi2025.@aws-0-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require
+DATABASE_URL=postgresql://postgres:<YOUR_SUPABASE_PASSWORD>@aws-0-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require
